--- a/src/index.css
+++ b/src/index.css
@@ -192,3 +192,23 @@
   background: rgba(255, 255, 255, 0.6);
   filter: blur(750px);
 }
+
+#contact-bg {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+#contact-bg::before {
+  content: "";
+  position: absolute;
+  top: -60%;
+  left: -80%;
+  
+  width:260%;
+ 
+  height: 250%;
+  z-index: -1;
+  background: rgb(46,4,87);
+  background: linear-gradient(90deg, rgba(46,4,87,1) 47%, rgba(93,227,230,1) 48%, rgba(80,190,202,1) 88%, rgba(93,205,230,1) 100%);
+  transform: rotate(60deg);
+}
